# chronos-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CONTEXT.md  cli-reference.md  getting-started.md  roadmap.md
docs/adapters/: anthropic_agents.md
docs/case-studies/: fork-via-emit-python.md  langgraph-bigtool.md  langgraph-supervisor.md  langgraph-swarm.md
docs/contracts/: adapter-protocol.md
docs/decisions/: ADR-000-template.md  ADR-001-language.md  ADR-002-langgraph-first-adapter.md  ADR-003-sqlite-schema.md  ADR-004-langgraph-snapshot-mapping.md  ADR-005-fork-semantics.md  ADR-006-diff-alignment.md  ADR-007-replay-tui-framework.md  ADR-008-fork-cli-plan-artifact.md  ADR-009-usage-extractor-hook.md  ADR-010-native-usage-extractors.md  ADR-011-state-serialization-boundary.md  ADR-012-multi-llm-per-node-usage.md  ADR-013-fork-auto-execution-stay-frozen.md  ADR-014-phase-2-entry-criteria.md  ADR-015-extractor-contract-v2.md  ADR-016-adapter-interface.md  ADR-017-autogen-adapter-sync-wrap.md  ADR-018-compare-is-diff.md  ADR-019-chronos-does-not-sandbox.md  ADR-020-adapter-tool-node-name-shape.md  ADR-021-crewai-adapter.md  ADR-022-crewai-version-pin-bump.md  ADR-023-phase-4-charter-skeleton.md  ADR-024-multi-pivot-compare.md  ADR-025-fork-tree-viz-scope.md  ADR-026-arc-b-scope.md
docs/design/: architecture.md  fork-tree-viz.md  fourth-adapter-landscape.md  n-run-compare.md  user-stories.md
docs/guides/: forking-safely.md  side-effects.md
docs/progress/: 2026-04-25-round-42a.md  2026-04-25-round-43.md  2026-04-25-round-44-a.md  2026-04-25-round-45-a.md  2026-04-26-round-46-a.md  2026-04-26-round-47.md  2026-04-27-round-48-a.md  2026-04-27-round-48-b.md  2026-04-27-round-48-c.md  2026-04-27-round-49.md  2026-04-27-round-50.md  2026-05-06-round-51.md  2026-05-07-round-52.md  2026-05-07-round-53.md  2026-05-08-round-54.md  2026-05-08-round-55.md  2026-05-08-round-56.md  2026-05-08-round-57.md  2026-05-09-round-58.md  2026-05-09-round-59.md  2026-05-10-round-60.md  2026-05-10-round-61.md  2026-05-10-round-62.md  2026-05-11-round-63.md  2026-05-11-round-64.md  2026-05-11-round-65.md  2026-05-12-round-66.md  2026-05-12-round-67.md  2026-05-12-round-68.md  2026-05-13-round-69.md  2026-05-14-round-70.md  2026-05-14-round-71.md  2026-05-14-round-72.md  2026-05-14-round-73.md  2026-05-14-round-74.md  2026-05-15-round-75.md  2026-05-15-round-76.md  2026-05-15-round-77.md  2026-05-15-round-78.md  2026-05-16-round-79.md  (+10 more)
docs/research/: competitors.md  feasibility.md  fork-sandbox-feasibility.md  multi-framework-risks.md  ph3-02-effects-schema-decision.md  r48a-autogen-tool-effects.md  r49-langgraph-adr020-audit.md  r51-crewai-event-bus-characterization.md  r61-multi-pivot-alignment.md  r66-fork-tree-viz-audit.md  r68-arc-b-scope.md  r69-mcp-fork-lifecycle.md  risks.md
examples/: README.md  __init__.py  _fake_llm.py  linear_pipeline.py  router_loop.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  NodeDetails.tsx  RunList.tsx  TreeView.tsx  api.ts  layout.ts  main.tsx  styles.css  theme.ts  types.ts
progress/: 2026-04-22-round-1.md  2026-04-22-round-2.md  2026-04-22-round-3.md  2026-04-22-round-4.md  2026-04-23-round-10.md  2026-04-23-round-11.md  2026-04-23-round-12.md  2026-04-23-round-13.md  2026-04-23-round-14.md  2026-04-23-round-15.md  2026-04-23-round-16.md  2026-04-23-round-17.md  2026-04-23-round-18.md  2026-04-23-round-19.md  2026-04-23-round-20.md  2026-04-23-round-21.md  2026-04-23-round-22.md  2026-04-23-round-23a.md  2026-04-23-round-24.md  2026-04-23-round-25.md  2026-04-23-round-26.md  2026-04-23-round-27.md  2026-04-23-round-28.md  2026-04-23-round-29.md  2026-04-23-round-5.md  2026-04-23-round-6.md  2026-04-23-round-7.md  2026-04-23-round-8.md  2026-04-23-round-9.md  2026-04-24-round-30.md  2026-04-24-round-31.md  2026-04-24-round-32.md  2026-04-24-round-33.md  2026-04-24-round-34.md  2026-04-24-round-35-a.md  2026-04-24-round-38.md  2026-04-24-round-39-a.md  2026-04-25-round-40.md  2026-04-25-round-41.md
scripts/: dogfood.sh  dogfood_auto_pivot.py  dogfood_compare_n.py  dogfood_fork_tool_override.py  dogfood_fork_tool_result_override.py  dogfood_fork_tree.py  seed_demo.py  seed_r47a_effects.py
scripts/dogfood/: _degradation.py  arc_b_slice_1_smoke.py  arc_b_slice_2_fork.py  arc_b_slice_3_fork_override.py  arc_b_slice_3_mcp.py
src/chronos/: __init__.py  fork_plan.py
tests/: conftest.py
tests/integration/: fixtures_writer.py  fork_writer.py  test_dual_adapter_dogfood.py  test_examples.py  test_fork_e2e.py  test_sqlite_e2e.py
tests/live/: test_anthropic_agents_fork_override_smoke.py  test_anthropic_agents_fork_smoke.py  test_anthropic_agents_mcp_smoke.py  test_crewai_smoke.py  (+2 more)
(+102 files in other folders)
