[project]
name = "chronos-agent"
version = "0.5.1"
description = "Time-travel debugger for multi-agent AI systems — record, replay, fork, diff reasoning trees."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "chengfei867", email = "867540436@qq.com" },
    { name = "Hermes Agent (AI)", email = "agent@hermes.ai" },
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "debugger", "time-travel", "langgraph", "tracing", "observability"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "sqlite-utils>=3.36",
]

[project.optional-dependencies]
langgraph = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]
autogen = [
    "autogen-agentchat>=0.7.5",
    "autogen-ext>=0.7.5",
]
crewai = [
    # ADR-021 §D8: 0.80+ is where scoped_handlers(), Future-returning
    # emit(), and top-level tool_name/agent_role on ToolUsage*Event are
    # stable. Upper bound is pre-emptive for CrewAI's pre-1.0 event-schema
    # churn.
    # ADR-022 (R53): upper bound bumped from <1.0 to <2.0 after
    # spike13a verified that CrewAI 1.14.3's event-bus surface is
    # a source-compatible superset of 0.80+. The <1.0 upper was
    # pre-emptive, not empirical.
    "crewai>=0.80,<2.0",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",  # needed by starlette.testclient for unit tests
]

[project.scripts]
chronos = "chronos.cli:app"

[project.urls]
Homepage = "https://github.com/chengfei867/chronos-agent"
Repository = "https://github.com/chengfei867/chronos-agent"
Issues = "https://github.com/chengfei867/chronos-agent/issues"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "chronos"
module-root = "src"

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "N",    # pep8-naming
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
# Typer idiomatically passes `typer.Option(...)` / `typer.Argument(...)` in
# function defaults. B008 forbids this in general Python; Typer itself
# documents and requires this pattern. Scope the allowance to the CLI module.
"src/chronos/cli/*" = ["B008"]
# Dogfood / seed scripts mutate sys.path before importing from local
# packages (chronos.*, examples.*) to work outside the installed venv.
# The ordering is intentional; don't flag E402.
"scripts/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The web optional extra is not always installed in every dev environment
# (CI vs. local minimal). When it is absent mypy can't find stubs for
# fastapi/starlette/uvicorn/httpx — treat them as missing-is-ok so the
# base suite still type-checks green without the extra.
module = ["fastapi.*", "starlette.*", "uvicorn.*", "httpx.*"]
ignore_missing_imports = true

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=chronos",
    "--cov-report=term-missing",
]
markers = [
    "spike: marks tests as PoC spikes (may be deleted later)",
    "integration: marks tests requiring external services (LLM API)",
    "slow: marks slow tests",
    "live: marks tests that make real LLM API calls (opt-in via CHRONOS_LIVE=1; skipped by default in CI)",
]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/chronos"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
